--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ apscheduler==3.5.1
 argcomplete
 bcrypt
 eventlet==0.22.1
+file:///Users/mstone/dev/stackstorm/st2/contrib/metrics/statsd
 flex==6.12.0
 git+https://github.com/Kami/logshipper.git@stackstorm_patched#egg=logshipper
 git+https://github.com/StackStorm/python-mistralclient.git#egg=python-mistralclient
@@ -26,7 +27,6 @@ oslo.utils<=3.33.0,>=3.15.0
 paramiko==2.4.1
 passlib==1.7.1
 prettytable
-prometheus_client==0.1.1
 prompt-toolkit==1.0.15
 psutil
 pyinotify==0.9.6
@@ -45,7 +45,6 @@ routes==2.4.1
 semver==2.7.9
 six==1.11.0
 sseclient==0.0.19
-statsd==3.2.2
 stevedore==1.28.0
 tooz==1.61.0
 unittest2
